--- a/app/scss/ui/_tabs.scss
+++ b/app/scss/ui/_tabs.scss
@@ -7,22 +7,27 @@
 			margin: 0 auto;
 		}
 		ul.tabs{
+			display: flex;
+			flex-direction: row;
+			align-items: center;
 			margin: 0px;
 			padding: 0px;
 			list-style: none;
+			height: 146px;
+			width: 100%;
 			text-align: center;
 		}
 		ul.tabs li {
 			background: none;
 			color: $grey-4;
 			display: inline-block;
-			@include padding($text-spacing-lg 0);
 			margin-right: 3rem;
 			cursor: pointer;
 			text-align: center;
 			line-height: $line-height-sml;
 			font-size: $h6;
 			font-weight: $font-bold;
+			@include span(2.4);
 			&:last-child {
 				margin-right: 0;
 			}
